rajout de menu de navigation
tu peux rajouter les éléments nécessaires stp

--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <title>Hello Ulysse</title>
   </head>
   <body>
+
+  	<header>
+	<nav>
+		<ul>
+			<li>item 1</li>
+			<li>item 2</li>
+			<li>item 3</li>
+			<li>item 4</li>
+			<li>item 5</li>
+			<li>item 6</li>
+			<li>item 7</li>
+	</ul>
+</nav>
+</header>
+
 this is the first modification of this repository
 Nice day
 have a great time
 i am hungry
 we need to eat now please
 pause bien méritée
+
   </body>
 </html>
